Adding Options, post, put and delete for Results
